Refatora GroupService para montar DTO com dados completos dos usuários
- Constrói UserDTOs a partir de entidades buscadas
- Atualiza métodos save, update, delete, find
- Corrige erros de construtor e variáveis ausentes